--- a/textroller.css
+++ b/textroller.css
@@ -29,3 +29,37 @@ body {
 	top: 8.6vmin;
 	animation: white-out 5s infinite;
 }
+
+.closure::after {
+	content: '';
+	position: absolute;
+	height: 25vmin;
+	width: 40vmin;
+	background: #282c34;
+	transform: translate(-40vmin,-24.5vmin);
+}
+
+.closure::before {
+	content: '';
+	position: absolute;
+	height: 25vmin;
+	width: 40vmin;
+	background: #282c34;
+	transfor: translate(-40vmin,5vmin);
+}
+
+.en {
+	color: #fa8231;
+}
+
+.es {
+	color: white;
+}
+
+.de {
+	color: #c678dd;
+}
+
+.it {
+	color: #a9b0bd;
+}
